added timeout and retry count to api configuration

--- a/ts/tools/scripts/getKeys.config.json
+++ b/ts/tools/scripts/getKeys.config.json
@@ -9,6 +9,8 @@
       "AZURE_OPENAI_ENDPOINT_GPT_4_O_MINI",
       "AZURE_OPENAI_RESPONSE_FORMAT",
       "AZURE_OPENAI_MAX_CONCURRENCY",
+      "AZURE_OPENAI_MAX_TIMEOUT",
+      "AZURE_OPENAI_MAX_RETRYATTEMPTS",
       "AZURE_OPENAI_API_KEY",
       "AZURE_OPENAI_API_KEY_GPT_35_TURBO",
       "AZURE_OPENAI_ENDPOINT_GPT_v",
