--- a/dotnet/.editorconfig
+++ b/dotnet/.editorconfig
@@ -168,6 +168,7 @@ dotnet_diagnostic.RCS1085.severity = none # Use auto-implemented property.
 dotnet_diagnostic.CA1002.severity = none # Change 'List<string>' in '...' to use 'Collection<T>' ...
 dotnet_diagnostic.CA1032.severity = none # We're using RCS1194 which seems to cover more ctors
 dotnet_diagnostic.CA1034.severity = none # Do not nest type. Alternatively, change its accessibility so that it is not externally visible
+dotnet_diagnostic.CA1036.severity = none # IComparable
 dotnet_diagnostic.CA1062.severity = none # Disable null check, C# already does it for us
 dotnet_diagnostic.CA1303.severity = none # Do not pass literals as localized parameters
 dotnet_diagnostic.CA1304.severity = none # Specify CultureInfo
@@ -253,6 +254,7 @@ dotnet_diagnostic.IDE0110.severity = none # Remove unnecessary discards
 dotnet_diagnostic.IDE00130.severity = none # 
 dotnet_diagnostic.IDE0160.severity = none # Use block-scoped namespace
 
+dotnet_diagnostic.IDE0251.severity = none
 dotnet_diagnostic.IDE0290.severity = none
 
 ###############################
