--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -128,11 +128,11 @@ jobs:
           npm run start:dev 'prompt' 'why is the sky blue'
         working-directory: ts/packages/cli
 
-      - name: Shell Tests - smoke (windows)
+      - name: Shell Tests - full (windows)
         if: ${{ runner.os == 'windows' }}
         timeout-minutes: 60
         run: |
-          npm run shell:smoke
+          npm run shell:test
         working-directory: ts/packages/shell
 
       - name: Shell Tests - smoke (linux)
@@ -143,7 +143,8 @@ jobs:
           npm run shell:smoke
         working-directory: ts/packages/shell
 
-      - name: Live Tests
+      - name: Live Tests (Linux)
+        if: ${{ runner.os == 'Linux' }}
         timeout-minutes: 60
         run: |
           npm run test:live
