--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -79,6 +79,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "readline": "^1.3.0",
     "sanitize-filename": "^1.6.3",
+    "textpro": "workspace:*",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
     "website-memory": "workspace:*",
