--- a/ts/package.json
+++ b/ts/package.json
@@ -37,6 +37,7 @@
     "regen": "pnpm -C packages/cli run regen",
     "regen:builtin": "pnpm -C packages/cli run regen:builtin",
     "shell": "pnpm -C packages/shell run start",
+    "shell:nosandbox": "pnpm -C packages/shell run start:nosandbox",
     "shell:dev": "pnpm -C packages/shell run dev",
     "shell:package": "pnpm -C packages/shell run package",
     "shell:start:package": "pnpm -C packages/shell run start:package",
