--- a/python/ta/pyproject.toml
+++ b/python/ta/pyproject.toml
@@ -3,9 +3,10 @@ requires = ["setuptools>=67", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "typeagent"
-version = "0.1.0"
+name = "typeagent-py"
+version = "0.1.8"
 description = "TypeAgent implements an agentic memory framework."
+readme = { file = "README.md", content-type = "text/markdown" }
 authors = [
   { name = "Guido van Rossum", email = "gvanrossum@microsoft.com" },
   { name = "Steven Lucco" },
@@ -19,6 +20,9 @@ dependencies = [
   "build>=1.2.2.post1",
   "colorama>=0.4.6",
   "coverage[toml]>=7.9.1",
+  "google-api-python-client>=2.184.0",
+  "google-auth-httplib2>=0.2.0",
+  "google-auth-oauthlib>=1.2.2",
   "logfire>=4.1.0",
   "mcp[cli]>=1.12.1",
   "numpy>=2.2.6",
@@ -31,7 +35,8 @@ dependencies = [
   "pytest-asyncio>=0.26.0",
   "pytest-mock>=3.14.0",
   "python-dotenv>=1.1.0",
-  "typechat",
+  "typechat>=0.0.4",
+  "webvtt-py>=0.5.1",
 ]
 
 [project.urls]
@@ -50,8 +55,8 @@ packages = [
     "typeagent.storage.sqlite",
 ]
 
+[tool.setuptools.package-data]
+"typeagent.podcasts" = ["*.json"]
+
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
-
-[tool.uv.sources]
-typechat = { git = "https://github.com/microsoft/TypeChat", subdirectory = "python" }
