--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -71,6 +71,7 @@
     "jsonpath": "^1.1.1",
     "knowledge-processor": "workspace:*",
     "knowpro": "workspace:*",
+    "markdown-it": "^14.1.0",
     "pdfjs-dist": "^5.3.31",
     "prismjs": "^1.30.0",
     "puppeteer": "^23.8.0",
@@ -99,6 +100,7 @@
     "@types/jquery": "^3.5.14",
     "@types/jsdom": "^21.1.7",
     "@types/jsonpath": "0.2.4",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20.10.4",
     "@types/prismjs": "^1.26.3",
     "@types/ws": "^8.5.10",
