adding support for video creation via sora

--- a/ts/tools/scripts/getKeys.config.json
+++ b/ts/tools/scripts/getKeys.config.json
@@ -20,6 +20,8 @@
       "AZURE_OPENAI_ENDPOINT_EMBEDDING",
       "AZURE_OPENAI_API_KEY_DALLE",
       "AZURE_OPENAI_ENDPOINT_DALLE",
+      "AZURE_OPENAI_API_KEY_SORA",
+      "AZURE_OPENAI_ENDPOINT_SORA",
       "AZURE_OPENAI_API_KEY_GPT_5",
       "AZURE_OPENAI_ENDPOINT_GPT_5",
       "AZURE_OPENAI_API_KEY_GPT_5_MINI",
