--- a/ts/packages/defaultAgentProvider/data/config.json
+++ b/ts/packages/defaultAgentProvider/data/config.json
@@ -52,6 +52,10 @@
     },
     "spelunker": {
       "name": "spelunker-agent"
+    },
+    "video": {
+      "name": "video-agent",
+      "excecMode": "dispatcher"
     }
   },
   "mcpServers": {
