--- a/ts/packages/defaultAgentProvider/package.json
+++ b/ts/packages/defaultAgentProvider/package.json
@@ -36,6 +36,7 @@
     "@modelcontextprotocol/sdk": "^1.17.5",
     "@modelcontextprotocol/server-filesystem": "2025.8.21",
     "@typeagent/agent-sdk": "workspace:*",
+    "action-grammar": "workspace:*",
     "action-schema": "workspace:*",
     "agent-cache": "workspace:*",
     "agent-dispatcher": "workspace:*",
