--- a/ts/packages/defaultAgentProvider/package.json
+++ b/ts/packages/defaultAgentProvider/package.json
@@ -70,6 +70,7 @@
     "telemetry": "workspace:*",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
+    "video-agent": "workspace:*",
     "ws": "^8.17.1",
     "zod": "^3.24.1"
   },
