--- a/dotnet/typeagent/src/aiclient/aiclient.csproj
+++ b/dotnet/typeagent/src/aiclient/aiclient.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\common\common.csproj" />
+    <ProjectReference Include="..\typechat\TypeChat.csproj" />
   </ItemGroup>
 
 </Project>
