--- a/dotnet/typeagent/src/vector/vector.csproj
+++ b/dotnet/typeagent/src/vector/vector.csproj
@@ -8,4 +8,12 @@
     <RootNamespace>TypeAgent.Vector</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Numerics.Tensors" Version="10.0.0-rc.2.25502.107" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\common\common.csproj" />
+  </ItemGroup>
+
 </Project>
