--- a/dotnet/typeagent/examples/knowProConsole/knowProConsole.csproj
+++ b/dotnet/typeagent/examples/knowProConsole/knowProConsole.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\aiclient\aiclient.csproj" />
     <ProjectReference Include="..\..\src\common\common.csproj" />
     <ProjectReference Include="..\..\src\conversationMemory\conversationMemory.csproj" />
     <ProjectReference Include="..\..\src\knowproStorage\knowproStorage.csproj" />
