--- a/dotnet/typeagent/src/aiclient/aiclient.csproj
+++ b/dotnet/typeagent/src/aiclient/aiclient.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.17.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\common\common.csproj" />
     <ProjectReference Include="..\typechat\TypeChat.csproj" />
   </ItemGroup>
