--- a/ts/packages/defaultAgentProvider/data/config.json
+++ b/ts/packages/defaultAgentProvider/data/config.json
@@ -56,6 +56,10 @@
     "video": {
       "name": "video-agent",
       "excecMode": "dispatcher"
+    },
+    "settings": {
+      "name": "settings-agent",
+      "execMode": "dispatcher"
     }
   },
   "mcpServers": {
