--- a/ts/packages/defaultAgentProvider/package.json
+++ b/ts/packages/defaultAgentProvider/package.json
@@ -65,6 +65,7 @@
     "oracle-agent": "workspace:*",
     "photo-agent": "workspace:*",
     "proper-lockfile": "^4.1.2",
+    "settings-agent": "workspace:*",
     "spelunker-agent": "workspace:*",
     "string-width": "^7.2.0",
     "telemetry": "workspace:*",
