--- a/dotnet/typeagent/src/vector/vector.csproj
+++ b/dotnet/typeagent/src/vector/vector.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\aiclient\aiclient.csproj" />
     <ProjectReference Include="..\common\common.csproj" />
   </ItemGroup>
 
