--- a/dotnet/typeagent/src/knowproStorage/knowproStorage.csproj
+++ b/dotnet/typeagent/src/knowproStorage/knowproStorage.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\common\common.csproj" />
     <ProjectReference Include="..\knowpro\knowpro.csproj" />
+    <ProjectReference Include="..\vector\vector.csproj" />
   </ItemGroup>
 
 </Project>
