Added cache REST endpoint sample.

--- a/ts/.vscode/launch.json
+++ b/ts/.vscode/launch.json
@@ -414,6 +414,16 @@
       "args": [],
       "console": "externalTerminal",
       "outFiles": ["${workspaceFolder}/**/*.js"]
-    },       
+    }, 
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch AgentCache REST Endpoint",
+      "skipFiles": ["<node_internals>/**"],
+      "cwd": "${workspaceFolder}/examples/cacheRESTEndpoint",
+      "program": "./dist/index.js",
+      "outFiles": ["${workspaceFolder}/**/*.js"],
+      "resolveSourceMapLocations": []
+    },          
   ]
 }
