--- a/dotnet/typeagent/src/knowpro/knowpro.csproj
+++ b/dotnet/typeagent/src/knowpro/knowpro.csproj
@@ -10,6 +10,13 @@
 
   <ItemGroup>
     <None Remove="dateTimeSchema.ts" />
+    <None Remove="Lang\searchQuerySchema.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Lang\searchQuerySchema.ts">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
