fixed settings manifest

--- a/ts/packages/agents/settings/src/settingsManifest.json
+++ b/ts/packages/agents/settings/src/settingsManifest.json
@@ -1,9 +1,9 @@
 {
   "emojiChar": "⚙️",
-  "description": "Agent to manipulate windows system settings",
+  "description": "Agent to manipulate system settings",
   "schema": {
-    "description": "Settings agent that helps the user change system settings on a Windows machine.",
-    "schemaFile": "./settingsActionSchemaV2.ts",
+    "description": "Settings agent that helps the user change system settings.",
+    "schemaFile": "./settingsActionSchema.ts",
     "schemaType": "SettingsAction"
   }
 }
