--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -9,11 +9,14 @@ on:
   workflow_dispatch:
   push:
     branches: ["main"]
+    paths:
+      - 'ts/**' # only run on changes to ts/ folder
   pull_request_target:
     branches: ["main"]
+    paths:
+      - 'ts/**' # only run on changes to ts/ folder
   merge_group:
     branches: ["main"]
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
