--- a/ts/.gitignore
+++ b/ts/.gitignore
@@ -13,3 +13,8 @@ coverage/
 
 #interactive apps
 command_history.json
+
+#settings agent
+packages/agents/settings/src/settingsActionSchemaV2.ts
+examples/schemaStudio/data/settingsCommands.csv
+examples/schemaStudio/output/
