--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -9,12 +9,12 @@ on:
   workflow_dispatch:
   push:
     branches: ["main"]
-    paths:
-      - 'ts/**' # only run on changes to ts/ folder
+    #paths:
+    #  - 'ts/**' # only run on changes to ts/ folder
   pull_request_target:
     branches: ["main"]
-    paths:
-      - 'ts/**' # only run on changes to ts/ folder
+    #paths:
+    #  - 'ts/**' # only run on changes to ts/ folder
   merge_group:
     branches: ["main"]
 concurrency:
