prevent error when .env file doesnt exist.

--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -160,6 +160,6 @@ jobs:
 
       - name: Clean up Keys
         run: |
-          rm ./.env
+          rm -f ./.env
         working-directory: ts
         if: always()
