--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -66,6 +66,11 @@
     "dompurify": "^3.2.5",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
+    "graphology": "^0.25.4",
+    "graphology-communities-louvain": "^2.0.1",
+    "graphology-layout": "^0.6.1",
+    "graphology-layout-forceatlas2": "^0.10.1",
+    "graphology-layout-noverlap": "^0.4.1",
     "html-to-text": "^9.0.5",
     "jsdom": "^26.1.0",
     "jsonpath": "^1.1.1",
