Use graphology for graph metrics in addition to layout

--- a/ts/packages/memory/website/package.json
+++ b/ts/packages/memory/website/package.json
@@ -36,6 +36,9 @@
     "debug": "^4.4.0",
     "dompurify": "^3.2.6",
     "get-folder-size": "^5.0.0",
+    "graphology": "^0.25.4",
+    "graphology-communities-louvain": "^2.0.1",
+    "graphology-metrics": "^2.1.0",
     "jsdom": "^26.1.0",
     "knowledge-processor": "workspace:*",
     "knowpro": "workspace:*",
