--- a/.gitignore
+++ b/.gitignore
@@ -446,3 +446,6 @@ android/samples/mobile/.idea/deploymentTargetSelector.xml
 
 # Mac OS files
 .DS_Store
+/ts/.claude
+/ts/packages/cli/.collection-backups
+/ts/packages/cli/.import-states
