--- a/ts/packages/dispatcher/package.json
+++ b/ts/packages/dispatcher/package.json
@@ -60,6 +60,7 @@
     "exifreader": "^4.30.1",
     "file-size": "^1.0.0",
     "glob": "^10.3.12",
+    "html-to-text": "^9.0.5",
     "image-memory": "workspace:*",
     "knowledge-processor": "workspace:*",
     "knowpro": "workspace:*",
@@ -76,6 +77,7 @@
     "@types/debug": "^4.1.12",
     "@types/file-size": "^1.0.3",
     "@types/glob": "^8.1.0",
+    "@types/html-to-text": "^9.0.4",
     "@types/jest": "^29.5.7",
     "@types/proper-lockfile": "^4.1.4",
     "@types/ws": "^8.5.10",
