--- a/dotnet/typeagent/src/knowpro/knowpro.csproj
+++ b/dotnet/typeagent/src/knowpro/knowpro.csproj
@@ -28,4 +28,9 @@
     <ProjectReference Include="..\typechat\TypeChat.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Knowledge\" />
+    <Folder Include="Answer\" />
+  </ItemGroup>
+
 </Project>
