KnowPro.NET Updates (#1758)
* Knowledge Extraction
  * Knowledge Json Translator
  * Knowledge extraction schema
  * ActionParam parsing
  * Knowledge merging 
  * Batch extraction
* Refactoring
* Bug fixes

--- a/dotnet/typeagent/src/knowpro/knowpro.csproj
+++ b/dotnet/typeagent/src/knowpro/knowpro.csproj
@@ -10,11 +10,13 @@
 
   <ItemGroup>
     <None Remove="dateTimeSchema.ts" />
+    <None Remove="KnowledgeExtractor\KnowledgeSchema.ts" />
     <None Remove="Lang\langSearchNoise.txt" />
     <None Remove="Lang\searchQuerySchema.ts" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="KnowledgeExtractor\KnowledgeSchema.ts" />
     <EmbeddedResource Include="Lang\langSearchNoise.txt" />
     <EmbeddedResource Include="Lang\searchQuerySchema.ts">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
@@ -26,6 +28,10 @@
     <ProjectReference Include="..\common\common.csproj" />
     <ProjectReference Include="..\typechat.schema\TypeChat.Schema.csproj" />
     <ProjectReference Include="..\typechat\TypeChat.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Answer\" />
   </ItemGroup>
 
 </Project>
