--- a/dotnet/typeagent/src/knowpro/knowpro.csproj
+++ b/dotnet/typeagent/src/knowpro/knowpro.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Answer\AnswerResponseSchema.ts" />
     <None Remove="dateTimeSchema.ts" />
     <None Remove="KnowledgeExtractor\KnowledgeSchema.ts" />
     <None Remove="Lang\langSearchNoise.txt" />
@@ -16,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Answer\AnswerResponseSchema.ts" />
     <EmbeddedResource Include="KnowledgeExtractor\KnowledgeSchema.ts" />
     <EmbeddedResource Include="Lang\langSearchNoise.txt" />
     <EmbeddedResource Include="Lang\searchQuerySchema.ts">
@@ -28,10 +30,6 @@
     <ProjectReference Include="..\common\common.csproj" />
     <ProjectReference Include="..\typechat.schema\TypeChat.Schema.csproj" />
     <ProjectReference Include="..\typechat\TypeChat.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Answer\" />
   </ItemGroup>
 
 </Project>
