--- a/.github/workflows/build-package-shell.yml
+++ b/.github/workflows/build-package-shell.yml
@@ -8,7 +8,7 @@ name: build-package-shell
 on:
   workflow_dispatch:
   push:
-    branches: ["main", "dev/robgruen/upload_artifact"]
+    branches: ["main"]
   pull_request:
     branches: ["main"]
   merge_group:
